--- a/examples/private-messaging/package.json
+++ b/examples/private-messaging/package.json
@@ -10,17 +10,13 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "socket.io-client": "^4.0.0",
-    "vue": "^2.6.14"
+    "vue": "^3.1.0",
+    "@vue/compat": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "vite": "^2.2.3",
+    "@vitejs/plugin-vue": "^1.4.4",
+    "@vue/compiler-sfc": "^3.1.0"
   },
   "eslintConfig": {
     "root": true,
